--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t ilyassmt/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run stephengrider/docker-react npm run test -- --coverage
+  - docker run ilyassmt/docker-react npm run test -- --coverage
  
 
